--- a/pages/actvitycenter.html
+++ b/pages/actvitycenter.html
@@ -12,7 +12,7 @@
 		<ul>
 			<li class=""><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\index.html">მთვარი</li>
 			<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\news.html">ისტორია</li>
-			<li>თვითმმართველობა/</li>
+			<li>თვითმმართველობა</li>
 			<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\contacts.html">საკონტაქტო</li>
 		</ul>
 	</nav>
