--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,15 @@
 	</nav>
 		<div>
 		<img src="C:\Users\eli60\Documents\GitHub\finaluri\images\Screenshot 2024-06-19 124505.png">
-		<p><a href="...."></a>იხილეთ მეტი..</p>
+		<p class="p1"><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\news2024.html">იხილეთ მეტი..</p>
 		</div>
 </body>
+<footer>
+	<div class="footer-content">
+          <div class="container">
+        <img class="image" src="C:\Users\eli60\Documents\GitHub\finaluri\images\logos{{{banners{{{slogan\banner.png" alt="Your Image">
+    </div>
+           
+        </div>
+</footer>
 </html>
