--- a/pages/news.html
+++ b/pages/news.html
@@ -6,6 +6,7 @@
 	<title>finnaluri</title>
 	<link rel="stylesheet" type="text/css" href="C:\Users\eli60\Documents\GitHub\finaluri\styles\reset.css">
 	<link rel="stylesheet" type="text/css" href="C:\Users\eli60\Documents\GitHub\finaluri\styles\STYLES.CSS">
+	<link rel="stylesheet" type="text/css" href="C:\Users\eli60\Documents\GitHub\finaluri\styles\stylenews.css">
 </head>
 <body>
 	<nav>
@@ -16,6 +17,57 @@
 			<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\contacts.html">საკონტაქტო</li>
 		</ul>
 	</nav>
+		
+       		
+<section>
+		
+<!-- pirveli statia -->
+
+	<article class="article1">s
+		<div class="article1">
+		<p>ქ. ბათუმის #1 საჯარო სკოლას ამშვენებს მემორიალური დაფა, რომელიც მკითხველს აუწყებს, რომ 1881 წლის 12 მარტს, ილია ჭავჭავაძისა და წერა-კითხვის გამავრცელებელი საზოგადოების მიერ გაიხსნა აჭარაში პირველი ქართული სკოლა.</p><br> 
+
+<p>128 წლის წინათ გახსნილ პირველ ქართულ სკოლას თურქთა ბატონობისაგან თავდახსნილ და დედასაქართველოსთან დაბრუნებულ აჭარაში უნდა აღედგინა ქართულ ენაზე სწავლება და განსხვავებულ რელიგიურ სამყაროში ცხოვრებით დეფორმირებული შეგნება. იაკობ გოგებაშვილის აზრით დაფუძნების მიზანი ის იყო, რომ “ახლადშემოერთებულ მაჰმადიან ქართველთა შვილები მიეზიდნა, გაემართნა ქართულს წერა – კითხვაში, მათი შუამავლობით შემდეგში გაევრცელებინა აჭარაში ქართული წიგნის ცოდნა და ამ გზით განეახლებინა კავშირი ღვიძლ ძმათაშორის, რომელნიც ულმობელმა ბედმა ერთმანეთს გაჰყარა წარსულ საუკუნეებში.”</p><br>
+
+<P>სკოლის გახსნას დაესწრო და სიტყვა წარმოთქვა ილია ჭავჭავაძემ. იგი ასე არიგებდა მასწავლებლებს: დიდი სიფრთხილით და მოხერხებით არის საჭირო მუსლიმანებს შორის მუშაობა. გახსოვდეთ, რომ ქართველი მუსლიმანები ჩვენი ძმები, მეტად ნიჭიერი, დინჯი, დაკვირვებული და ზრდილობიანი ხალხია. იხმარეთ ყოველი ღონე, რომ მათი ნდობა და სიყვარული დაიმსახუროთ,…დიდი მიღწევა იქნება ჩვენს მხრივ წერა-კითხვასთან ერთად თუ შეაგნებინებთ, რომ ისინი ქართველები არიანო.</P><br>
+
+<p>პირველად სკოლა მდებარეობდა ახმედიეს ქუჩაზე ( ცენტრალური უნივერმაღის უბანი), შემდეგ ნურიეს უბანში (ახლანდელი მოსწავლე-ახალგაზრდობის პარკის მიმდებარე ტერიტორია), საშინელ ჭაობიან ადგილას. მხოლოდ 1887 წლის ივლისში, შეპელევის ქუჩაზე ( ახლანდელი დიმიტრი თავდადებილის, ქუჩა სადაც ამჟამადაა განთავსებული სკოლა), დაუქირავებიათ შედარებით უკეთესი ბინა.</p><br>
+
+<p>მიუხედავად სირთულეებისა, ბათუმის პირველმა სკოლამ მოკლე დროში მოიხვეჭა უდიდესი პატივისცემა ადგილობრივ მოსახლეობაში, იგი მაშინდელი საზოგადოების მოწინავე წარმომადგენელთა ბიოგრაფიის ნაწილი გახდა. პირველი ქართული სკოლის დაარსებით დაიწყო აჭარაში ეროვნულ-საგანმანათლებლო ტრადიციების აღდგენა, იგი გახდა ფლაგმანი ეროვნული განათლებისა არა მარტო ამ კუთხეში, არამედ მთლიანად, სამხრეთ-დასავლეთ საქართველოში.</p><br>
+
+<p>პირველი სკოლის მასწავლებლობა და ხელმძღვანელობა წერა-კითხვის განმავრცელებელმა საზოგადოებამ ალექსანდრე ნანეიშვილს მიანდო.იგი შემდგომში მოსე ნათაძემ შეცვალა.</p><br>
+
+<p>პირველსავე მიღებაზე სკოლაში ჩარიცხული 30 მოსწავლიდან 11 მართმადიდებელი იყო, 6 კათოლიკური სარწმუნოებისა და 13 მაჰმადიანი, რომელთა შორის 1 გოგონა - უფლიე აბაშიძე. სწავლება ოთხკურსიანი კურსით ისწავლებოდა: საღვთო სჯული, ქართული ენა, რუსული ენა, არითმეტიკა, თვალსაჩინო სწავლება, სუფთა წერა, გალობა და გიმნასტიკა.</p><br>
+
+<p>სკოლა ყოველთვის იყო მოწინავე ქართველი ინტელიგენციის ზრუნვის საგანი, პირველი სკოლის ეროვნულ მნიშვნელობაზე უამრავი მასალა იბეჭდებოდა საქართველოს პრესის ფურცლებზე, მისთვის თანხის მოზიდვის მიზნით მრავალი პატრიოტი იღწვოდა, რომელთა შორის აღსანიშნავია გრიგოლ ვოლსკი, ივანე მესხი, ლუკა ასათიანი ….. მათი ძალისხმევით ყოველი წლის 14 იანვარს, საზოგადო საკრებულოს დარბაზში იმართებოდა დიდი საღამო, რომელშიც მონაწილეობდნენ ცნობილი ქართველი ხელოვნების მუშაკები, მწერლები, პოეტები. პირველ საღამოზე ბათუმს ეწვია აკაკი წერეთელი. საღამოზე დიდძალი თანხა შემოვიდა და გადაეცა სკოლას საკუთარი შენონის ასაგებად.</p><br>
+
+<p>შენობის აგება დაიწყო 1893 წლის ივნისში. მოწინავე ქართველმა საზოგადოებამ სკოლის მშენებლობისათვის მოაგროვა 6000 მანეთი, ნაწილი კი გაიღო წერა კითხვის გამარცელებელმა საზოგადოებამ. სკოლის ერთსართულიანი შენობის მშენებლობა 2 წელს გაგრძელდა. 1930 – იანი წლების მეორე ნახევარში ამ ერთსართულიან შენობას ფასადის შეუცვლელად დააშენეს მეორე სართული, რადგან განზრახული იყო საშუალო სკოლის გახსნა.</p><br>
+
+<p>1969 წელს ამ შენობის ადგილზე აშენდა თამანედროვე ტიპის ორსართულაინი შენობა.</p><br>
+
+<p>ქ. ბათუმის #1 საჯარო სკოლა დღემდე ინახავს საუკეთესო ტრადიციებს, კვლავ ითვლება აჭარაში სასკოლო განათლების უპირველეს ნიშანსვეტად, პირველმა აუწყო ფეხი საქართველოში ზოგადსაგანმანათლებლო სკოლის რეფორმას, აქ ინერგება ყოველგვარი სიახლე სწავლებაში, არის პილოტირების ცენტრი, იუნესკოში ასოცირებული 1999 წლიდან, ჩართულია TIMSS პროგრამაში, სკოლამ არაერთი მამულიშვილი მაღალეროვნულ და ზნეობრივ იდეალებზე აღზრდილი მისცა ქვეყანას, გამარჯვებული და გრანტირებულია სხვადასხვა პროგრამებსა და თუ კონკურსებში, აღჭურვილია კომპიუტერული ტექნიკით, გაუმჯობესებულია მისი მატრიალურ ტექნიკური ბაზა.</p><br>
+
+<p>გასულ 2009 წელს სკოლას დამატებით სარგებლობისათვის გადაეცა პედაგოგიური კოლეჯის ისტორიული შენობა.</p><br>
+
+<p>ამჟამად ქ. ბათუმის #1 საჯარო სკოლაში სწავლობს 1938 მოსწავლე.</p><br>
+
+<p>1981 წელს დიდი ზეიმით აღინიშნა სკოლის 100 წლის ხოლო 2006 წელს 125 წლის იუბილე.</p><br>
+
+
+
+	</div>	
+		
+	</article>
+
+
+<div class="evt">
+	
+		
+		<img src="C:\Users\eli60\Documents\GitHub\finaluri\images\Vector_down_arrow_link.svg..png">
+		<h6>იხილეთ გალერეა</h6>
+
+	
+</div>
 
 </body>
 </html>
