--- a/pages/news2024.html
+++ b/pages/news2024.html
@@ -8,14 +8,26 @@
 	<link rel="stylesheet" type="text/css" href="C:\Users\eli60\Documents\GitHub\finaluri\styles\STYLES.CSS">
 	<link rel="stylesheet" type="text/css" href="C:\Users\eli60\Documents\GitHub\finaluri\styles\stylemain.css">
 </head>
-<body>
-	<nav>
-		<ul>
-			<li>მთავარი</li>
-			<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\news.html">ისტორია</li>
-			<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\actvitycenter.html">თვითმმართველობა</li>
-			<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\contacts.html">საკონტაქტო </li>
-		</ul>
-	</nav>
-</body>
+	<body>
+		<nav>
+			<ul>
+				<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\index.html">მთავარი</li>
+				<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\news.html">ისტორია</li>
+				<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\actvitycenter.html">თვითმმართველობა</li>
+				<li><a href="C:\Users\eli60\Documents\GitHub\finaluri\pages\contacts.html">საკონტაქტო </li>
+			</ul>
+		</nav>
+
+
+		<div>
+				<h1>
+				ბოლო ზარი 2024!
+						</h1>
+						<p>
+							
+						</p>
+						</div>
+	</body>
+
+
 </html>
